# Search-Tree-Lab

./: .gitignore  CMakeLists.txt  Search tree.cpp  Search tree.h
